<resources>
    <string name="app_name">Shrine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user">Nome de Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="bt_cancel">Cancelar</string>
    <string name="bt_Next">Próximo</string>
    <string name="tab_carrinho">Carrinho</string>
    <string name="tab_fav">Favoritos</string>
    <string name="tab_pay">Pagamento</string>
    <string name="text_pay">Bitch Better Have My Money</string>
    <string name="text_prefer">Preferidos</string>
    <string name="text_desires">Estou querendo</string>
    <string name="image_shell">desenho de uma concha</string>
    <string name="bt_calculator">Calculadora de IMC</string>
    <string name="hint_peso">Peso (Kg)</string>
    <string name="hint_altura">Altura (m)</string>
    <string name="hint_title">Cálculo do IMC</string>
    <string name="hint_subtitle">Descubra seu índice de Massa Corporal</string>
    <string name="button_calculate">Calcular</string>
    <string name="vagabond_sack">Vagabond sack</string>
    <string name="price_sack">$120</string>
    <string name="stella_sunglasses">Stella sunglasses</string>
    <string name="price_stella">$58</string>
    <string name="string_belt">Whitney belt</string>
    <string name="price_belt">$35</string>
    <string name="string_strand">Garden strand</string>
    <string name="price_strand">$98</string>
    <string name="string_earring">Strut earring</string>
    <string name="price_earrings">$34</string>
    <string name="string_socks">Varsity socks</string>
    <string name="price_socks">$22</string>
    <string name="content_description_favorite">botao para os itens favoritos</string>
    <string name="favorite">Favoritos</string>
    <string name="search">Search</string>
    <string name="content_description_search">botao pesquisar</string>
    <string name="content_description_more">botao mais opções</string>
    <string name="more">More</string>
    <string name="logo_nome">Shrine Store</string>
    <string name="description_logo">silhueta de uma sereia</string>
</resources>