<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/imageLogo"
            android:contentDescription="@string/image_shell"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/logo_oficial"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintStart_toStartOf="@+id/etUsername"
            app:layout_constraintEnd_toEndOf="@+id/etUsername"
            app:layout_constraintBottom_toTopOf="@+id/btCancel"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toStartOf="@+id/btNext"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintHorizontal_chainStyle="packed"
            />
        <Button
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_Next"
            app:layout_constraintTop_toTopOf="@+id/btCancel"
            app:layout_constraintEnd_toEndOf="@id/etUsername"
            app:layout_constraintHorizontal_bias="0.1"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@color/colorPrimary"
            />


</androidx.constraintlayout.widget.ConstraintLayout>