<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CalculadoraFragment">
    
    <TextView
        android:id="@+id/tTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_title"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tsubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_subtitle"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tTitle"
        app:layout_constraintStart_toStartOf="@id/tTitle"
        app:layout_constraintEnd_toEndOf="@id/tTitle"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tsubtitle"
        app:layout_constraintStart_toStartOf="@id/tTitle"
        app:layout_constraintEnd_toEndOf="@id/tTitle"
        app:layout_constraintBottom_toTopOf="@id/etWeight"
        app:lottie_rawRes="@raw/fitness_loading_spinner"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/animationWeight"
        app:layout_constraintStart_toStartOf="@id/tTitle"
        app:layout_constraintEnd_toStartOf="@id/etHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altura"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/animationWeight"
        app:layout_constraintStart_toEndOf="@id/etWeight"
        app:layout_constraintEnd_toEndOf="@id/tTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate"
        style="attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toBottomOf="@id/etWeight"
        app:layout_constraintStart_toStartOf="@id/tTitle"
        app:layout_constraintEnd_toEndOf="@id/tTitle"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:textSize="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>